# OpenWeather-web-connector

./: Makefile  README.md  pyproject.toml
src/: main.py
src/webconnector/: app.py
src/webconnector/routers/: describe_collections.py  execute_query.py  test_connection.py
