[tool.poetry]
name = "openweather-web-connector"
version = "0.1.0"
description = "Web Connector developed for Crystal"
authors = ["Massimiliano Ceriani <massimilianoceriani08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
igenius-adapters-sdk = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
